--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
       android:label="@string/app_name"
       android:supportsRtl="true"
       android:theme="@style/AppTheme"
+      android:screenOrientation="portrait"
       >
     <activity android:name=".ui.songslist.SongsActivity">
       <intent-filter>
@@ -19,7 +20,11 @@
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
-    <activity android:name=".ui.songshow.SongShowActivity" android:theme="@style/AppTheme.NoActionBar"/>
+    <activity
+        android:name=".ui.songshow.SongShowActivity"
+        android:theme="@style/AppTheme.NoActionBar"
+        android:screenOrientation="portrait"
+        />
   </application>
 
 </manifest>
